style: fix colors and gaps

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -2,7 +2,7 @@
 
 .header
     margin: 0 auto
-    padding: 2rem 7.5rem
+    padding: 1rem 7.5rem
     background: $bg-color
     border-radius: $border-radius
 
