--- a/src/components/Navigation/Navigation.module.sass
+++ b/src/components/Navigation/Navigation.module.sass
@@ -6,8 +6,8 @@
     &__container
         display: flex
         justify-content: space-between
-        gap: 8rem
+        gap: 5rem
 
 .points
     display: flex
-    gap: 2rem
+    gap: 1rem
